Fix LinkedIn links not showing

--- a/src/components/pages/About/Bios.css
+++ b/src/components/pages/About/Bios.css
@@ -102,7 +102,7 @@
 }
 
 .dev-bios .social-wrapper .button:hover {
-  width: 120px;
+  width: 125px;
   box-shadow: 0 10px 10px 0 rgba(0, 0, 0, 0.2);
 }
 
